--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 <div>
 	<h2>Консультация для родителей</h2>
 	<a href="rod.html"><img src="rod.png" align ="left" height = "120" width = "200"></a>
-	<p>Первый столбец текста. Здесь можно написать что-то интересное.</p>
-	<p>Еще один абзац для первого столбца.</p>
-	<br><br><br><br>
+	<p>Для детей общение с родителями очень важно, <br>и здесь есть советы как это делать верно</p>
+	<br><br><br><br><br>
 
 	<h2>Консультация для педагогов</h2>
 	<a href="ped.html"><img src="ped.png" align ="left" height = "120" width = "200"></a>
-	<p>Второй столбец текста. Здесь также можно добавить полезную информацию.</p>
-	<p>Дополнительный абзац для второго столбца.</p>
+	<p>Преподаватели так же много общаются с детьми все время их обучения<br> и здесь есть для этого советы</p>
 </div>
 
 </body>
